--- a/portal-ui/package.json
+++ b/portal-ui/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "8.0.7",
     "react-redux": "^8.0.7",
     "react-router-dom": "6.14.0",
+    "react-tooltip": "5.13.0",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.9",
     "react-window-infinite-loader": "^1.0.9",
