--- a/portal-ui/package.json
+++ b/portal-ui/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.3",
     "react-grid-layout": "^1.2.0",
+    "react-markdown": "^8.0.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "6.10.0",
     "react-virtualized": "^9.22.5",
