--- a/.github/workflows/issues.yaml
+++ b/.github/workflows/issues.yaml
@@ -15,4 +15,4 @@ jobs:
       - uses: actions/add-to-project@RELEASE_VERSION
         with:
           project-url: https://github.com/orgs/miniohq/projects/2
-          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+          github-token: ${{ secrets.BOT_PAT }}
