--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
     steps:
       - name: Check out code
         uses: actions/checkout@v3
