Force upgraded versions

--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -22,7 +22,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -85,7 +85,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -130,7 +130,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -153,7 +153,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
     steps:
       # To build minio image, we need to clone the repository first
       - name: Clone github.com/minio/minio
@@ -188,7 +188,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -227,7 +227,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -251,7 +251,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -298,7 +298,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -344,7 +344,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -390,7 +390,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -430,7 +430,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -470,7 +470,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -510,7 +510,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -550,7 +550,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -590,7 +590,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -635,7 +635,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -680,7 +680,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -728,7 +728,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -765,7 +765,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
@@ -804,7 +804,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
 
     steps:
       - name: Check out code
@@ -893,7 +893,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
 
     steps:
       - name: Check out code
@@ -968,7 +968,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
 
     steps:
       - name: Check out code
@@ -1039,7 +1039,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.20.6]
         os: [ubuntu-latest]
     steps:
       - name: Check out code
