--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -200,6 +200,29 @@ jobs:
         run: |
           make console
 
+  react-code-known-vulnerabilities:
+    name: "React Code Has No Known Vulnerable Deps"
+    needs:
+      - ui-assets
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.20.6]
+        os: [ubuntu-latest]
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NVMRC }}
+          cache: "yarn"
+          cache-dependency-path: portal-ui/yarn.lock
+      - name: Checks for known security issues with the installed packages
+        working-directory: ./portal-ui
+        continue-on-error: false
+        run: |
+          yarn audit --groups dependencies
+
   all-permissions-1:
     name: Permissions Tests Part 1
     needs:
