--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -102,11 +102,11 @@ jobs:
         continue-on-error: false
         run: |
           ./check-prettier.sh
-      - name: Check for dead code
-        working-directory: ./web-app
-        continue-on-error: false
-        run: |
-          ./check-deadcode.sh
+      # - name: Check for dead code
+      #   working-directory: ./web-app
+      #   continue-on-error: false
+      #   run: |
+      #     ./check-deadcode.sh
 
   latest-minio:
     name: Build latest MinIO
@@ -873,6 +873,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Enable Corepack
+        run: corepack enable
       - name: Install modules
         working-directory: ./web-app
         run: yarn
@@ -1418,7 +1420,7 @@ jobs:
           yarn add -D @playwright/test
           yarn init -y
           echo "yarn install"
-          yarn install --no-check-resolutions
+          yarn install --no-check-resolutions --no-immutable
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
