--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -228,8 +228,8 @@ jobs:
         run: npm install testcafe@3.5.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/subpath-nginx/ -q --skip-js-errors -c 3
-
+        run: |
+           npx testcafe "chrome:headless" web-app/tests/subpath-nginx/ --skip-js-errors --selector-timeout 10000 --assertion-timeout 10000 -c 3
       - name: Clean up docker
         if: always()
         run: |
