--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -229,7 +229,7 @@ jobs:
 
       - name: Run TestCafe Tests
         run: |
-          npx testcafe "chrome:headless" web-app/tests/subpath-nginx/ --skip-js-errors --selector-timeout 10000 --assertion-timeout 10000 -c 3 --debug-on-fail
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/subpath-nginx/ --skip-js-errors --selector-timeout 10000 --assertion-timeout 10000 -c 3 --debug-on-fail
       - name: Clean up docker
         if: always()
         run: |
