--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -225,11 +225,11 @@ jobs:
           (CONSOLE_SUBPATH=/console/subpath ./console server ) & (make test-initialize-minio-nginx)
 
       - name: Install TestCafe
-        run: npm install -g testcafe
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
         run: |
-          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/subpath-nginx/ --skip-js-errors --selector-timeout 10000 --assertion-timeout 10000 -c 3 --debug-on-fail
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/subpath-nginx/ --skip-js-errors -c 3 --debug-on-fail
       - name: Clean up docker
         if: always()
         run: |
@@ -279,10 +279,11 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-1/ -q --skip-js-errors -c 3
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-1/ --skip-js-errors -c 3 --debug-on-fail
 
       - name: Clean up users & policies
         run: |
@@ -331,11 +332,11 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-2/ -q --skip-js-errors -c 3
-
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-2/ --skip-js-errors -c 3 --debug-on-fail
       - name: Clean up users & policies
         run: |
           make cleanup-permissions
@@ -383,10 +384,11 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-3/ -q --skip-js-errors -c 3
+        run: |
+         npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-3/ --skip-js-errors -c 3 --debug-on-fail
 
       - name: Clean up users & policies
         run: |
@@ -435,12 +437,12 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
         timeout-minutes: 10
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-4/ --skip-js-errors
-
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-4/ --skip-js-errors -c 3 --debug-on-fail
   all-permissions-5:
     name: Permissions Tests Part 5
     needs:
@@ -483,12 +485,12 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-5/ --skip-js-errors
-
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-5/ --skip-js-errors -c 3 --debug-on-fail
   all-permissions-6:
     name: Permissions Tests Part 6
     needs:
@@ -531,12 +533,12 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-6/ --skip-js-errors
-
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-6/ --skip-js-errors -c 3 --debug-on-fail
   all-permissions-7:
     name: Permissions Tests Part 7
     needs:
@@ -578,12 +580,12 @@ jobs:
         run: |
           (./console server) & (make initialize-permissions)
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-7/ --skip-js-errors
-
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-7/ --skip-js-errors -c 3 --debug-on-fail
   all-permissions-8:
     name: Permissions Tests Part 8
     needs:
@@ -626,11 +628,12 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-8/ --skip-js-errors
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-8/ --skip-js-errors -c 3 --debug-on-fail
 
   all-permissions-A:
     name: Permissions Tests Part A
@@ -674,11 +677,11 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-A/ --skip-js-errors -c 3
-
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-A/  --skip-js-errors -c 3 --debug-on-fail
       - name: Clean up users & policies
         run: |
           make cleanup-permissions
@@ -725,10 +728,11 @@ jobs:
           (./console server) & (make initialize-permissions)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install -g testcafe@3.7.0-rc.1
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-B/ --skip-js-errors -c 3
+        run: |
+          npx testcafe "chrome:headless --disable-search-engine-choice-screen" web-app/tests/permissions-B/  --skip-js-errors-c 3 --debug-on-fail
 
       - name: Clean up users & policies
         run: |
