--- a/web-app/package.json
+++ b/web-app/package.json
@@ -8,6 +8,8 @@
     "@reduxjs/toolkit": "^1.9.7",
     "clsx": "^2.1.1",
     "http-status-codes": "^2.3.0",
+    "i18next": "^23.16.4",
+    "i18next-http-backend": "^2.6.2",
     "kbar": "^0.1.0-beta.45",
     "local-storage-fallback": "^4.1.2",
     "lodash": "^4.17.21",
