--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -228,7 +228,7 @@ jobs:
         run: npm install testcafe@3.5.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/subpath-nginx/ -q --skip-js-errors -c 3
+        run: npx testcafe "firefox:headless" web-app/tests/subpath-nginx/ -q --skip-js-errors -c 3
 
       - name: Clean up docker
         if: always()
@@ -282,7 +282,7 @@ jobs:
         run: npm install testcafe@3.5.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-1/ -q --skip-js-errors -c 3
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-1/ -q --skip-js-errors -c 3
 
       - name: Clean up users & policies
         run: |
@@ -334,7 +334,7 @@ jobs:
         run: npm install testcafe@3.5.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-2/ -q --skip-js-errors -c 3
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-2/ -q --skip-js-errors -c 3
 
       - name: Clean up users & policies
         run: |
@@ -386,7 +386,7 @@ jobs:
         run: npm install testcafe@3.5.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-3/ -q --skip-js-errors -c 3
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-3/ -q --skip-js-errors -c 3
 
       - name: Clean up users & policies
         run: |
@@ -439,7 +439,7 @@ jobs:
 
       - name: Run TestCafe Tests
         timeout-minutes: 10
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-4/ --skip-js-errors
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-4/ --skip-js-errors
 
   all-permissions-5:
     name: Permissions Tests Part 5
@@ -487,7 +487,7 @@ jobs:
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-5/ --skip-js-errors
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-5/ --skip-js-errors
 
   all-permissions-6:
     name: Permissions Tests Part 6
@@ -535,7 +535,7 @@ jobs:
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-6/ --skip-js-errors
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-6/ --skip-js-errors
 
   all-permissions-7:
     name: Permissions Tests Part 7
@@ -582,7 +582,7 @@ jobs:
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-7/ --skip-js-errors
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-7/ --skip-js-errors
 
   all-permissions-8:
     name: Permissions Tests Part 8
@@ -630,7 +630,7 @@ jobs:
 
       - name: Run TestCafe Tests
         timeout-minutes: 5
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-8/ --skip-js-errors
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-8/ --skip-js-errors
 
   all-permissions-A:
     name: Permissions Tests Part A
@@ -677,7 +677,7 @@ jobs:
         run: npm install testcafe@3.5.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-A/ --skip-js-errors -c 3
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-A/ --skip-js-errors -c 3
 
       - name: Clean up users & policies
         run: |
@@ -728,7 +728,7 @@ jobs:
         run: npm install testcafe@3.5.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "chrome:headless" web-app/tests/permissions-B/ --skip-js-errors -c 3
+        run: npx testcafe "firefox:headless" web-app/tests/permissions-B/ --skip-js-errors -c 3
 
       - name: Clean up users & policies
         run: |
@@ -900,88 +900,6 @@ jobs:
       - name: Run tests
         working-directory: ./web-app
         run: yarn test
-  replication:
-    name: Site Replication Test
-    needs:
-      - lint-job
-      - ui-assets
-      - semgrep-static-code-analysis
-      - latest-minio
-    runs-on: [ubuntu-latest]
-
-    strategy:
-      matrix:
-        go-version: [1.22.x]
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Set up Go ${{ matrix.go-version }} on ${{ matrix.os }}
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-        id: go
-
-      - name: Clone github.com/minio/minio
-        uses: actions/checkout@master
-        with:
-          repository: minio/minio
-          path: "minio_repository"
-      - name: Check-out matching MinIO branch
-        env:
-          GH_BRANCH: ${{ github.head_ref || github.ref_name }}
-          GH_PR_REPO: ${{ github.event.pull_request.head.repo.full_name }}
-        run: |
-          GH_PR_ACCOUNT=`echo $GH_PR_REPO | sed "s/\\/.*//"`
-          if [ ! -z "$GH_PR_ACCOUNT" ] && [ ! "$GH_PR_ACCOUNT" = "minio" ]; then
-            ALTREPO="https://github.com/$GH_PR_ACCOUNT/minio.git"
-            echo "Attempting to fetch $ALTREPO..."
-            git remote add alt $ALTREPO
-            (git fetch alt && git checkout "alt/$GH_BRANCH") || echo "$ALTREPO ($GH_BRANCH) not available, so keeping default repository/branch"
-          fi
-      - uses: actions/cache@v4
-        id: minio-latest-cache
-        name: MinIO Latest Cache
-        with:
-          path: |
-            ./minio
-          key: ${{ runner.os }}-minio-latest-${{ hashFiles('./minio_repository/go.sum') }}
-
-      - name: Build on ${{ matrix.os }}
-        run: |
-          echo "The idea is to build minio image from downloaded repository";
-          cd $GITHUB_WORKSPACE/minio_repository;
-          echo "Get git version to build MinIO Image";
-          VERSION=`git rev-parse HEAD`;
-          echo $VERSION;
-          echo "Create MinIO image";
-          make docker VERSION=$VERSION;
-
-          docker build -q --no-cache -t minio/minio:$VERSION . -f Dockerfile
-          echo "Jumping back to console repository to run the integration test"
-          cd $GITHUB_WORKSPACE;
-
-          echo "We are going to use the built image on test-integration";
-          MINIO_VERSION="minio/minio:$VERSION";
-          echo $MINIO_VERSION;
-
-          make test-replication MINIO_VERSION=$MINIO_VERSION;
-      - uses: actions/cache@v4
-        id: coverage-cache-replication
-        name: Coverage Cache Replication
-        with:
-          path: |
-            ./replication/coverage/
-          key: ${{ runner.os }}-replication-coverage-2-${{ github.run_id }}
-
-      # To save our replication.out file into an artifact.
-      # By default, GitHub stores build logs and artifacts for 90 days.
-      - uses: actions/upload-artifact@v4
-        with:
-          name: replication-artifact
-          path: ./replication/coverage/replication.out
-          if-no-files-found: error
   sso-integration:
     name: SSO Integration Test
     needs:
