--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -220,10 +220,10 @@ jobs:
           (CONSOLE_SUBPATH=/console/subpath ./console server ) & (make test-initialize-minio-nginx)
 
       - name: Install TestCafe
-        run: npm install testcafe@3.5.0
+        run: npm install testcafe@3.7.0
 
       - name: Run TestCafe Tests
-        run: npx testcafe "firefox:headless" web-app/tests/subpath-nginx/ -q --skip-js-errors -c 1
+        run: npx testcafe "chrome:headless" web-app/tests/subpath-nginx/ -q --skip-js-errors -c 1
 
       - name: Clean up docker
         if: always()
