Upgrade dompurify to 3.2.4

--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -73,7 +73,7 @@ jobs:
         id: node_version
         run: echo "$(cat .nvmrc)" && echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_ENV
       - name: Enable Corepack
-        run: corepack enable && corepack prepare yarn@stable --activate
+        run: corepack enable
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NVMRC }}
